# wfmeta-dask

./: .flake8  .gitignore  README.md  dask_capture.py  dask_md_helpers.py  dask_md_objs.py  ex_run.sh  pyproject.toml  requirements-CI.txt  requirements-dev.txt  requirements.txt  ruff.toml  setup.py
.github/workflows/: lint.yaml  run_tests.yaml
data/backup/: head_scheduler_transition.csv
data/df_output/: WORKER_TRANSFER_df.csv
docs/: conf.py  helpers.rst  index.rst  intro.md  intro.rst  module2.rst  modules.rst  requirements.txt
docs/_autosummary/: dask_capture.rst  dask_md_helpers.rst  dask_md_objs.Event.rst  dask_md_objs.EventSource.rst  dask_md_objs.SchedulerEvent.rst  dask_md_objs.Task.rst  dask_md_objs.TaskHandler.rst  dask_md_objs.TaskState.rst  dask_md_objs.TransferTypeEnum.rst  dask_md_objs.WXferEvent.rst  dask_md_objs.rst
portal/: dashboard.py
scratch/: group_info.py  read_sched.ipynb  read_validate_sched.py  scheduler_trans_scratch.ipynb  scratch.ipynb  worker_pickled_scratch.ipynb  worker_trans_scratch.ipynb  worker_validation_scratch.ipynb  worker_xfer_scratch.ipynb
src/: dask_capture.py  dask_md_helpers.py
src/daskcapture/: __init__.py  dask_capture.py  dask_md_helpers.py  dask_md_objs.py
src/objs/: enums.py  events.py
src/portal/: dashboard.py
src/scratch/: compression_scratch.ipynb  read_validate_sched.py  scheduler_trans_scratch.ipynb  scratch.ipynb  worker_trans_scratch.ipynb  worker_validation_scratch.ipynb
src/wfmeta_dask/: __init__.py  __main__.py  helpers.py
tests/: test_integration.py  test_md_objs.py
(+14 files in other folders)
