[project]
name = "dask_capture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "autodocsumm>=0.2.13",
    "dash-mantine-components>=0.14.4",
    "dash>=2.18.1",
    "ipykernel>=6.29.5",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx>=7.1.2",
]
