[project]
name = "dask_capture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.2",
    "pandas>=2.3.0",
    "pytest>=8.3.3",
]

[dependency-groups]
dev = [
    "autodocsumm>=0.2.13",
    "dash-mantine-components>=0.14.4",
    "dash>=2.18.1",
    "ipykernel>=6.29.5",
    "myst-parser>=3.0.1",
    "sphinx>=7.1.2",
    "sphinx-rtd-theme>=2.0.0",
]

[tool.pytest.ini_options]
pythonpath= [
    "src/daskcapture"
]